--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:text="Take Screenshot"/>
 
-    <ImageView android:id="@+id/imageView1"
+    <com.example.mehtapunit.imagedimension.MyImageView
+        android:id="@+id/imageView1"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 
